# callMeBaby

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
llm_sdk/: pyproject.toml
llm_sdk/llm_sdk/: __init__.py
src/: JSONStateMachine.py  __init__.py  __main__.py  call_me_maybe.py  functions.py  functionsDefinition.py  functions_manager.py
src/models/: __init__.py  json_state.py
src/utils/: __init__.py  number_utils.py  string_utils.py  token_utils.py
tests/: test.py  testJson.py  test_call_me_maybe.py  test_error_handling.py  test_json_fd_parsing.py  test_json_ouput.py  test_json_parsing.py  test_json_state_machine.py  test_loads_prompts.py  test_utils_number.py  test_utils_string.py  test_utils_token.py
tests/data/: wrong_functions_definition.json
