[project]
name = "callmebaby"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "llm-sdk",
    "numpy>=2.4.4",
    "pydantic>=2.13.0",
    "pytest>=9.0.3",
]

[tool.uv.workspace]
members = ["llm_sdk"]

[tool.uv.sources]
llm-sdk = { workspace = true, editable = true }

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src:."
explicit_package_bases = true
namespace_packages = true
#ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llm_sdk"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "llm_sdk.*"
follow_imports = "skip"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.1",
]
