[project]
name = "callmemaybe"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "llm-sdk",
    "numpy>=2.4.4",
    "pydantic>=2.13.0",
]

[tool.uv.workspace]
members = ["llm_sdk"]

[tool.uv.sources]
llm-sdk = { workspace = true, editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "."
#ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llm_sdk"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "llm_sdk.*"
follow_imports = "skip"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
]
